--- a/document/main.tex
+++ b/document/main.tex
@@ -242,7 +242,8 @@ difíceis. Vocês são muito importantes para mim.
 Agradeço à minha irmãzinha Mariana, que me dá luz, esperança e me mantém são sempre que preciso. Você é um
 presente na vida de toda a família.
 
-Agradeço à Kaum e a Luluzinha, por todos os momentos divertidos e ensinamentos passados.
+Agradeço à Kaum e a Luluzinha, por todos os momentos divertidos, todo esse tempo que pudemos passar juntos
+e todos os ensinamentos passados.
 
 Agradeço à Vó Bete por todo amor, toda força, todas as séries e todos os açaís. Você é uma companheira para a
 vida, e não sei o que seria sem você.
