--- a/document/main.tex
+++ b/document/main.tex
@@ -220,8 +220,8 @@ guiaram e me trouxeram até aqui. O tempo é o nosso recurso mais valioso, e voc
 das pessoas que tocam. Agradeço também ao Prof. Rubens pelas aulas valiosas e muito bem humoradas, e ao amigo
 Emilio por aceitar fazer parte desse momento.
 
-Agradeço aos amigos que me acompanharam nesse trajetória, em especial ao Alan, Alex, Marlon e Rodolpho, por
-todo conhecimento compartilhado, todo companheirismo e todos os momentos que vivemos juntos.
+Agradeço aos amigos que me acompanharam nesse trajetória, em especial ao Alan Hiroyuki, Alan Lopes, Alex, Marlon
+e Rodolpho, por todo conhecimento compartilhado, todo companheirismo e todos os momentos que vivemos juntos.
 
 Agradeço à minha namorada, Fernanda, pelo amor, compreensão, todas as comidas gostosas e toda ajuda em organizar
 minha cabeça quando tudo parecia perdido.
