--- a/document/main.tex
+++ b/document/main.tex
@@ -217,8 +217,7 @@ Membro titular\\[2.41cm]
 Agradeço especialmente ao meu orientador, Prof. Rafael Krummenauer, que muito me inspirou durante todo o curso,
 como professor, como profissional, como pessoa e como amigo. Agradeço a todos os professores que me ensinaram,
 guiaram e me trouxeram até aqui. O tempo é o nosso recurso mais valioso, e vocês o usam para mudar as vidas
-das pessoas que tocam. Agradeço também ao Prof. Rubens pelas aulas valiosas e muito bem humoradas, e ao amigo
-Emilio por aceitar fazer parte desse momento.
+das pessoas que tocam.
 
 Agradeço aos amigos que me acompanharam nesse trajetória, em especial ao Alan Hiroyuki, Alan Lopes, Alex, Marlon
 e Rodolpho, por todo conhecimento compartilhado, todo companheirismo e todos os momentos que vivemos juntos.
